Fixed the update to working copy and back after (cancel) checkout: fdo#64533

After Checkout, simply set medium name and update the medium: at least
we are sure it works in more situations than the other function we used.

After cancel checkout, call SID_RELOAD to actually revert any local
change.

Change-Id: I3dc296a74726770c4f47d9653c382108f7baccad
(cherry picked from commit a68e0e334df02c1ca47601575523b23c6db13470)